proxy/envoy_server.yaml
node:
    cluster: service_greeter
    id: test-id

admin:
    access_log_path: /dev/null
    address:
        socket_address:
            address: 0.0.0.0
            port_value: 9000

static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address: { address: 0.0.0.0, port_value: 50051 }
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_grpc
                          codec_type: AUTO
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ['*']
                                    routes:
                                        - match:
                                              prefix: '/'
                                          route:
                                              cluster: service_grpc
                          http_filters:
                              - name: envoy.filters.http.grpc_stats
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                                    stats_for_all_methods: true
                                    enable_upstream_stats: true
                              - name: envoy.filters.http.router
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                transport_socket:
                    name: envoy.transport_sockets.tls
                    typed_config:
                        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                        common_tls_context:
                            tls_certificates:
                                - certificate_chain:
                                      filename: proxy/server.crt
                                  private_key:
                                      filename: proxy/server.key

    clusters:
        - name: service_grpc
          type: static
          connect_timeout: 5s
          http2_protocol_options: {}
          load_assignment:
              cluster_name: service_grpc
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 50052
          common_lb_config:
              healthy_panic_threshold:
                  value: 50.0
          health_checks:
              - timeout: 1s
                interval: 5s
                interval_jitter: 1s
                no_traffic_interval: 5s
                unhealthy_threshold: 1
                healthy_threshold: 3
                grpc_health_check:
                    service_name: 'echo.EchoServer'
                    authority: 'server.domain.com'
